--- a/style.css
+++ b/style.css
@@ -2,13 +2,39 @@ body{
  
     margin: 0px;
     padding: 0px;
-      font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
-        background-image: linear-gradient(to right, rgb(0, 47, 255), rgb(59, 179, 226));
-        color: white;
-        text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px rgb(21, 113, 218);
+    background-image: url("https://wallpaperaccess.com/full/300547.jpg");
+    font-family: 'Montserrat', 'Mplus 1p', 'Hiragino Sans', 'Hiragino Kaku Gothic Pro', '游ゴシック' , '游ゴシック体' , YuGothic , 'Yu Gothic', 'ＭＳ ゴシック' , 'MS Gothic', sans-serif;
+        text-shadow: 1px 1px 2px black, 0 0 5px blue, 0 0 5px rgb(21, 113, 218);
   }
 
 
+.title{
+
+  display: flex;
+  justify-content: center;
+}
 
 
 
+#winner-prompt{
+
+  display: flex;
+  justify-content: center;
+}
+
+.button-section{
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 68px;
+}
+
+button{
+
+  height: 250px;
+  width: 250px;
+  display: block;
+  border: 8px solid black;
+  border-radius: 100%;
+}
